--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -12,7 +12,7 @@
         <div class="col-sm-6">
             <h4>Vysvětlení pojmů:</h4>
             <b><i>Student</i></b>: student nebo žák Vaší školy<br />
-            <b><i>Studující učitel</i></b>: učitel Vaší školy, který se sám vyučuje v rámci šablony č.3.<br />
+            <b><i>Studující učitel</i></b>: učitel Vaší školy, který bude sám studovat v rámci šablony č. 3.<br />
             <b><i>Učitel</i></b>: to jste Vy, který řídí výuku <i>Studentů</i> v rámci šablony č. 4.<br />
             <b><i>Návštěvník</i></b>: kdokoliv, kdo si chce prohlédnout kurz, aniž by jeho výuka byla řízena <i>Učitelem</i><br />
         </div>
