--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -28,7 +28,7 @@
       <h4>Řízení výuky</h4>
       U zvoleného <i>Studenta</i> klikněte na <b>Výsledky</b>. To vám umožní:
       <ul>
-        <li>moci prohlížet výsledky práce <i>Studentů</i></li>
+        <li>prohlížet výsledky práce <i>Studentů</i></li>
         <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody</li>
         <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> ve vstupním, závěrečném a kontrolních testech</li>
         <li>mít přehled o čase, který <i>Student</i> strávil poslechem nahrávek rodilých mluvčích, o množství jím nahraného zvuku apod.</li>
