--- a/NewLMComModel/Design/Templates/htmlHead.tt
+++ b/NewLMComModel/Design/Templates/htmlHead.tt
@@ -37,6 +37,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-route.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-animate.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular-cookies.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.3/ui-bootstrap-tpls.js" type="text/javascript"></script>
 
