--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -122,10 +122,10 @@
 
 <script type="text/ng-template" id="vyzva$exercise$wrongscore.html">
   <div class="modal-header">
-    <h3 class="modal-title">Wrong score</h3>
+    <h3 class="modal-title">Upozornění</h3>
   </div>
   <div class="modal-body">
-    ???
+    Vaše odpověď není zcela správná. Opravdu chcete cvičení vyhodnotit?
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" type="button" lm-enter-key="::$close()" ng-click="::$close()">OK</button>
